# akmc-server

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/: main.py
server/api/endpoints/: __init__.py
server/api/endpoints/auth/: __init__.py  google.py  login.py  register.py  user.py
server/api/models/: auth.py
server/api/schemas/: __init__.py  auth.py  messages.py
server/config/: __init__.py
server/database/: main.py
server/helpers/auth/: main.py
